--- a/lab 5/index.html
+++ b/lab 5/index.html
@@ -15,7 +15,7 @@
         <li><a href="#third">Стингер</a></li>
       </ol>
       <div id="first">
-        <h2>Горбатая гора</h2>
+        <h2><strong>Горбатая гора</strong></h2>
         <h3>Краткое содержание фильма</h3>
         <p>
           "Горбатая гора" - американский нео-вестерн романтическая драма
@@ -63,7 +63,7 @@
         </table>
       </div>
       <div id="second">
-        <h2>Патруль</h2>
+        <h2><b>Патруль</b></h2>
         <h3>Краткое содержание фильма</h3>
         <p style="text-align: center">
           Двое друзей-полицейских, Брайан Тейлор и Майк Завала, служат в полиции
@@ -109,7 +109,7 @@
         </table>
       </div>
       <div id="third">
-        <h2>Стингер</h2>
+        <h2 style="font-weight: 900">Стингер</h2>
         <h3>Краткое содержание фильма</h3>
         <p style="text-align: right">
           Луи Блум пытается найти работу. После того как он видит, как
