--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <ul>
       <li><a href="lab 5/index.html">lab 5</a></li>
+      <li><a href="lab 6/index.html">lab 6</a></li>
     </ul>
   </body>
 </html>
