--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <ul>
       <li><a href="lab 5/index.html">lab 5</a></li>
       <li><a href="lab 6/index.html">lab 6</a></li>
+      <li><a href="lab 7/EVT_lab7.html">lab 7</a></li>
+      <li><a href="lab 8/EVT_lab8.html">lab 8</a></li>
     </ul>
   </body>
 </html>
