Complete lab9 (need fix)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <li><a href="lab 6/index.html">lab 6</a></li>
       <li><a href="lab 7/EVT_lab7.html">lab 7</a></li>
       <li><a href="lab 8/EVT_lab8.html">lab 8</a></li>
+      <li><a href="lab 9/EVT_lab9.html">lab 9</a></li>
     </ul>
   </body>
 </html>
