Complete lab 5 with an additional task

--- a/lab 5/index.html
+++ b/lab 5/index.html
@@ -8,12 +8,14 @@
   </head>
   <body>
     <section>
-      <h1>Мои любимые фильмы</h1>
-      <ol>
-        <li><a href="#first">Горбатая гора</a></li>
-        <li><a href="#second">Патруль</a></li>
-        <li><a href="#third">Стингер</a></li>
-      </ol>
+      <div id="preview">
+        <h1>Мои любимые фильмы</h1>
+        <ol>
+          <li><a href="#first">Горбатая гора</a></li>
+          <li><a href="#second">Патруль</a></li>
+          <li><a href="#third">Стингер</a></li>
+        </ol>
+      </div>
       <div id="first">
         <h2><strong>Горбатая гора</strong></h2>
         <h3>Краткое содержание фильма</h3>
